Fix: grid icon visibility, size, position

--- a/src/client/styles/components/_icons.scss
+++ b/src/client/styles/components/_icons.scss
@@ -14,6 +14,14 @@
     width: auto;
     cursor: pointer;
   }
+
+  &--grid{
+    position: relative;
+    right: 3.9rem;
+    top: -.5rem;
+    width: 3.3rem;
+    height: 3.3rem;
+  }
   &--user{
     position: absolute;
     right: 0.92rem;
