--- a/src/client/styles/components/_nav.scss
+++ b/src/client/styles/components/_nav.scss
@@ -21,10 +21,4 @@
           height: 40px;
         }
     }
-
-    .view__icons{
-      img:nth-child(2){
-        visibility: hidden;
-      }
-    }
 }
